<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered By Aman Pandey</string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>
    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--String for Dashboard-->

    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="resturants">Resturant</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="educations">Educations</string>

    <!--Titles and Descriptions-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All  the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!--  TOO: RETAILER PANEL STRINGS -->

    <!--  GENERAL STRINGS -->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!-- OTP Screen -->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+923333</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>