<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".User.UserDashboard"
    android:id="@+id/drawer_layout"
    >


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightWhite"
        android:layout_gravity="start"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/home_background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/menu_icon" />

        <ImageView
            android:id="@+id/login_signup"
            android:onClick="callRetailerScreen"
            android:background="@color/banner_background"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:padding="5dp"
            android:src="@drawable/add_missing_place_icon" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                    android:text="@string/logo_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp" />

                <RelativeLayout
                    android:background="@color/white"
                    android:elevation="8dp"
                    android:layout_below="@id/app_name"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_width="wrap_content"
                        android:text="@string/search_text" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_height="30dp"
                        android:layout_marginRight="15dp"
                        android:layout_width="30dp"
                        android:src="@drawable/search_icon" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                `
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/restaurant_icon"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/resturants"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_2"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/hotel_icons"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/hotels"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_3"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/school_icons"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/educations"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_4"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/shop_icons"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/shops"
                        android:gravity="center_horizontal" />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:background="@color/banner_background_light"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent">

                <LinearLayout
                    android:background="@color/banner_background_light"
                    android:id="@+id/featured_background"
                    android:layout_height="300dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="170dp"
                    android:orientation="vertical">

                    <TextView
                        android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:layout_width="wrap_content"
                        android:lineHeight="24sp"
                        android:text="@string/featured_locations"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:text="@string/featured_locations_description" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:background="@color/home_background"
                    android:id="@+id/featured_recycler"
                    android:layout_height="300dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:layout_width="match_parent" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                        android:text="@string/most_viewed_locations"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/view_all" />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/most_viewed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/view_all" />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
        
    </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>